--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@ Barack Obama, the 44th President of the United States, made history as the first
     <img src="images/child1.jpeg" alt="Obama as a child">
     </div>
     <p>Barack Obama was born on August 4, 1961, in Honolulu, Hawaii. He is the son of Barack Obama Sr., a Kenyan economist, and Ann Dunham, an American anthropologist. His parents' marriage was short-lived, and they separated when he was just two years old.</p>
-    <button class="Read More"
-    onclick="toggleContent('Content')">Read More</button>
-    <div id="Content" class="hidden">
+    <button class="read-more-btn" data-target="Content1 ">Read More</button>
+<div id="Content1 " class="hidden">
     <p>Growing up, Obama was influenced by a diverse cultural background. His mother raised him with a strong emphasis on education and the importance of community. She encouraged him to embrace his multicultural identity, which would shape his worldview.</p>
     <p><strong>Key aspects of his early life include:</strong></p>
     <ul>
@@ -46,9 +45,8 @@ Barack Obama, the 44th President of the United States, made history as the first
     <img src="images/senator1.jpeg" alt="Obama as a Senator">
     </div>
     <p>Barack Obama served as a U.S. Senator from Illinois from 2005 to 2008. During his tenure, he quickly gained a reputation as a skilled orator and a pragmatic legislator.</p>
-    <button class="Read More"
-    onclick="toggleContent('Content')">Read More</button>
-    <div id="Content" class="hidden">
+    <button class="read-more-btn" data-target="Content2 ">Read More</button>
+<div id="Content2 " class="hidden">
     <p>Obama focused on several key issues, including:</p>
     <ul>
         <li><strong>Health Care</strong>: He advocated for health care reform, pushing for increased access and affordability.</li>
@@ -65,9 +63,8 @@ Barack Obama, the 44th President of the United States, made history as the first
     <img src="images/president1.jpeg" alt="Obama during his presidency">
     </div>
     <p>Barack Obama was inaugurated as the 44th President of the United States on January 20, 2009, making history as the first African American to hold the office. His presidency was characterized by a commitment to hope and change, which resonated with millions of Americans seeking a new direction in leadership.</p>
-    <button class="Read More"
-    onclick="toggleContent('Content')">Read More</button>
-    <div id="Content" class="hidden">
+   <button class="read-more-btn" data-target="Content3 ">Read More</button>
+<div id="Content3 " class="hidden">
     <p>During his two terms in office (2009-2017), Obama faced numerous challenges, including a struggling economy, foreign conflicts, and domestic divisiveness. His administration focused on several key initiatives:</p>
     <ul>
         <li><strong>Economic Recovery</strong>: In response to the Great Recession, Obama implemented the American Recovery and Reinvestment Act, aimed at stimulating the economy, creating jobs, and providing relief to struggling families.</li>
@@ -85,9 +82,8 @@ Barack Obama, the 44th President of the United States, made history as the first
     <img src="images/event.jpeg" alt="Obama speaking at an event">
     </div>
     <p>Barack Obama's legacy is marked by significant achievements and a lasting impact on American society and the world stage. His presidency transformed the political landscape and inspired a new generation of leaders and activists.</p>
-    <button class="Read More"
-    onclick="toggleContent('Content')">Read More</button>
-    <div id="Content" class="hidden">
+    <button class="read-more-btn" data-target="Content4 ">Read More</button>
+<div id="Content4 " class="hidden">
     <p><strong>Key aspects of his legacy include:</strong></p>
     <ul>
         <li><strong>Advocacy for Equality</strong>: Obama championed civil rights, advocating for LGBTQ+ rights, including the repeal of "Don't Ask, Don't Tell" and supporting marriage equality. His administration's commitment to diversity and inclusion reshaped conversations around social justice.</li>
@@ -106,9 +102,8 @@ Barack Obama, the 44th President of the United States, made history as the first
     <img src="images/family.jpeg" alt="Obama with his family">
     </div>
     <p>Barack Obama is not only known for his political career but also for his rich personal life, which has significantly shaped his values and leadership style.</p>
-    <button class="Read More"
-    onclick="toggleContent('Content')">Read More</button>
-    <div id="Content" class="hidden">
+    <button class="read-more-btn" data-target="Content5 ">Read More</button>
+<div id="Content5 " class="hidden">
     <p>Born to a diverse family background, Obama's multicultural upbringing instilled in him a strong sense of empathy and understanding. He often speaks fondly of his mother, Ann Dunham, who emphasized the importance of education and community service, and his father, Barack Obama Sr., who inspired him with his commitment to social justice.</p>
     <p><strong>Key aspects of his personal life include:</strong></p>
     <ul>
@@ -123,9 +118,8 @@ Barack Obama, the 44th President of the United States, made history as the first
 <section>
     <h2>Famous Quotes</h2>
      <p>Barack Obama is known for his eloquent speeches and powerful words that inspire hope, change, and action. His quotes reflect his values and vision for a better world.</p>
-    <button class="Read More"
-    onclick="toggleContent('Content')">Read More</button>
-    <div id="Content" class="hidden">
+    <button class="read-more-btn" data-target="Content6 ">Read More</button>
+<div id="Content6 " class="hidden">
       <ul>
         <li><strong>"Change will not come if we wait for some other person or some other time. We are the ones we've been waiting for. We are the change that we seek."</strong></li>
         <li><strong>"The future rewards those who press on. I don’t have time to feel sorry for myself. I don’t have time to complain. I’m going to press on."</strong></li>
@@ -136,11 +130,10 @@ Barack Obama, the 44th President of the United States, made history as the first
     </div>
     <!-- Video Embed -->
     <h3>Watch Barack Obama Speak</h3>
-    <div class="img-container">
+    <div class="video-container">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/AEvpDuORXOE?si=lSZuJtxSFukeQh0D" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
-</section>
-  
+</section> 
 <section>
     <h2>Conclusion</h2>
     <p>Barack Obama's journey from a young boy in Hawaii to the 44th President of the United States is a remarkable story of resilience, hope, and dedication to public service. His leadership has left an indelible mark on American history and continues to inspire future generations.</p>
@@ -149,18 +142,20 @@ Barack Obama, the 44th President of the United States, made history as the first
 </section>
 
 <footer>
-    <p>&copy; 2025 Tribute to Barack Obama</p>
+    <p>&copy; 2025 Chrispinus Langat Tribute to Barack Obama</p>
 </footer>
-
 <script>
-function toggleContent(contentId) {
-    var content = document.getElementById(contentId);
-    if (content.style.display === "none" || content.style.display === "") {
-        content.style.display = "block";
-    } else {
-        content.style.display = "none";
-    }
-}
+document.querySelectorAll('.read-more-btn').forEach(button => {
+    button.addEventListener('click', function() {
+        const contentId = this.getAttribute('data-target'); // Get target section ID
+        const hiddenText = document.getElementById(contentId); // Find the section
+
+        if (hiddenText) {
+            hiddenText.classList.toggle('hidden'); // Toggle visibility
+            this.textContent = hiddenText.classList.contains('hidden') ? 'Read More' : 'Read Less';
+        }
+    });
+});
 </script>
 </body>
 </html>
